<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE5C5"
    android:orientation="vertical"
    android:textAlignment="center"
    android:textDirection="firstStrongLtr"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:gravity="center_horizontal"
        android:text="@string/min_rating"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="#EAE5C5"
        android:gravity="center|center_vertical"
        android:text="@string/min_tnku"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:background="#EAE5C5"
        app:srcCompat="@drawable/ww" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#FFEB3B"
        android:numStars="5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#96FF3B"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/mini_writeyre"
        android:inputType="textPersonName"
        android:lines="4"
        android:padding="5dp"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="displayToast"
        android:text="@string/min_confirm" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mini_seerevi" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mini_creviews" />


</LinearLayout>